Fixed an issue with the tooltips not showing correctly. Moved the tooltips one pixel down to be in line with the Office 2013 style.

--- a/Resources/Stylesheets/OfficeUI.Ribbon.less
+++ b/Resources/Stylesheets/OfficeUI.Ribbon.less
@@ -44,9 +44,6 @@
       width: 100%;
       z-index: 1;
 
-      /* Defines the styling for a tooltip element. */
-      .tooltip { display: none; position: fixed; top: 145px; }
-
       /* Defines an LI element inside the ribbon contents. */
       li {
         top: 0;
@@ -113,7 +110,7 @@
   }
 
   /* Defines the tooltips. */
-  .tooltip { background-color: #ffffff; background-image: none, linear-gradient(#c6c6c6, #c6c6c6); background-position: 0 0, 100% 0; background-repeat: no-repeat; background-size: 1px 100%; border: 1px solid #d4d4d4; box-shadow: 3px 3px 3px #e0e0e0; padding: 5px 11px; top: 90px; width: 191px; }
+  .tooltip { display: none; position: fixed; top: 146px; background-color: #ffffff; background-image: none, linear-gradient(#c6c6c6, #c6c6c6); background-position: 0 0, 100% 0; background-repeat: no-repeat; background-size: 1px 100%; border: 1px solid #d4d4d4; box-shadow: 3px 3px 3px #e0e0e0; padding: 5px 11px; width: 191px; }
 }
 
 /* Animations. */
